# IDvsPDControlExperiment

./: README.md  README.md~
motion-control-manipulator/: .still-controller.cpp.swp  .test.xml.swp  .ur10.xml.swo  .ur10.xml.swp  CMakeLists.txt  CMakeLists.txt~  IDgains.dat~  elbow_joint_desired05.txt  elbow_joint_state05.txt  gains.dat~  l_finger_actuator_state05.txt  plot_PD_PID.py  plot_PD_PID.py~  r_finger_actuator_state05.txt  resting-controller-PID.cpp~  resting-controller.cpp~  run.bash  shoulder_lift_joint_desired05.txt  shoulder_lift_joint_state05.txt  shoulder_pan_joint_desired05.txt  shoulder_pan_joint_state05.txt  sinusoidal-controller.cpp  sinusoidal-controller.cpp~  ur10.xml  wrist_1_joint_desired05.txt  wrist_1_joint_state05.txt  wrist_2_joint_desired05.txt  wrist_2_joint_state05.txt  wrist_3_joint_desired05.txt  wrist_3_joint_state05.txt
motion-control-manipulator/001vdata/: plot.bash  plotMSE.py
motion-control-manipulator/001vdata/actvsdes/: elbow_joint_desired001.txt  elbow_joint_state1.txt  l_finger_actuator_state01.txt  l_finger_actuator_state1.txt  plotActvDes.py  r_finger_actuator_state01.txt  r_finger_actuator_state1.txt  shoulder_lift_joint_desired05.txt  shoulder_lift_joint_state01.txt  shoulder_pan_joint_desired001.txt  shoulder_pan_joint_desired01.txt  shoulder_pan_joint_desired05.txt  shoulder_pan_joint_desired1.txt  shoulder_pan_joint_state01.txt  shoulder_pan_joint_state05.txt  (+13 more)
motion-control-manipulator/05vdata/: run.bash
motion-control-manipulator/CMakeModules/: FindMoby.cmake
motion-control-manipulator/ur10/: ur10.sdf
(+212 files in other folders)
